@@ -285,3 +285,9 @@
 524: Character does not exist.
 525: Mail has been sent.
 526: You have new mail.
+
+//Supernovice's Guardian Angel
+//----------------------------
+540: guardian angel, can you hear my voice? ^^;
+541: my name is %s, and i'm a super novice~
+542: please help me~ t.t
